// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - docker gateway-jwt-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-mariadb-elasticsearch-eureka-enableSwaggerCodegen(true)-messageBroker(no)-redis should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$\${jhipster.registry.password}@jhipster-registry:8761/eureka
      - SPRING_CLOUD_CONFIG_URI=http://admin:$\${jhipster.registry.password}@jhipster-registry:8761/config
      - SPRING_R2DBC_URL=r2dbc:mariadb://jhipster-mariadb:3306/jhipster?useLegacyDatetimeCode=false&serverTimezone=UTC
      - SPRING_LIQUIBASE_URL=jdbc:mariadb://jhipster-mariadb:3306/jhipster?useLegacyDatetimeCode=false&serverTimezone=UTC
      - SPRING_ELASTICSEARCH_URIS=http://jhipster-elasticsearch:9200
    ports:
      - 127.0.0.1:8080:8080
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8080/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      mariadb:
        condition: service_healthy
      elasticsearch:
        condition: service_healthy
      jhipster-registry:
        condition: service_healthy
  mariadb:
    extends:
      file: ./mariadb.yml
      service: mariadb
  elasticsearch:
    extends:
      file: ./elasticsearch.yml
      service: elasticsearch
  jhipster-registry:
    extends:
      file: ./jhipster-registry.yml
      service: jhipster-registry
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker gateway-jwt-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-mariadb-elasticsearch-eureka-enableSwaggerCodegen(true)-messageBroker(no)-redis should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/docker-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/localhost-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/config/mariadb/my.cnf": {
    "stateCleared": "modified",
  },
  "src/main/docker/elasticsearch.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-registry.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mariadb.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/swagger-editor.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/zipkin.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker gateway-oauth2-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-cucumber-enableSwaggerCodegen:true-websocket(true)-consul-neo4j-searchEngine(no)-eureka-enableSwaggerCodegen(false)-kafka-hazelcast should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$\${jhipster.registry.password}@jhipster-registry:8761/eureka
      - SPRING_CLOUD_CONFIG_URI=http://admin:$\${jhipster.registry.password}@jhipster-registry:8761/config
      - SPRING_NEO4J_URI=bolt://jhipster-neo4j:7687
      - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI=http://keycloak:9080/realms/jhipster
      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_ID=web_app
      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_SECRET=web_app
      - SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS=kafka:9092
    ports:
      - 127.0.0.1:8080:8080
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8080/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      neo4j:
        condition: service_healthy
      keycloak:
        condition: service_healthy
      jhipster-registry:
        condition: service_healthy
  neo4j:
    extends:
      file: ./neo4j.yml
      service: neo4j
  keycloak:
    extends:
      file: ./keycloak.yml
      service: keycloak
  jhipster-registry:
    extends:
      file: ./jhipster-registry.yml
      service: jhipster-registry
    depends_on:
      keycloak:
        condition: service_healthy
  kafka:
    extends:
      file: ./kafka.yml
      service: kafka
  zookeeper:
    extends:
      file: ./kafka.yml
      service: zookeeper
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker gateway-oauth2-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-cucumber-enableSwaggerCodegen:true-websocket(true)-consul-neo4j-searchEngine(no)-eureka-enableSwaggerCodegen(false)-kafka-hazelcast should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/docker-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/localhost-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-registry.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/kafka.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/keycloak.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/neo4j.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/realm-config/jhipster-realm.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/zipkin.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker microservice-jwt-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-cucumber-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-oracle-searchEngine(no)-eureka-enableSwaggerCodegen(false)-messageBroker(no)-cacheProvider(no) should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$\${jhipster.registry.password}@jhipster-registry:8761/eureka
      - SPRING_CLOUD_CONFIG_URI=http://admin:$\${jhipster.registry.password}@jhipster-registry:8761/config
      - SPRING_DATASOURCE_URL=jdbc:oracle:thin:@jhipster-oracle:1521:jhipster
      - SPRING_LIQUIBASE_URL=jdbc:oracle:thin:@jhipster-oracle:1521:jhipster
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8081/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      jhipster-registry:
        condition: service_healthy
  jhipster-registry:
    extends:
      file: ./jhipster-registry.yml
      service: jhipster-registry
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker microservice-jwt-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-cucumber-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-oracle-searchEngine(no)-eureka-enableSwaggerCodegen(false)-messageBroker(no)-cacheProvider(no) should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/docker-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/localhost-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-registry.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/zipkin.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker microservice-jwt-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-enableSwaggerCodegen:true-skipUserManagement(true)-eureka-postgresql-elasticsearch-eureka-enableSwaggerCodegen(true)-kafka should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$\${jhipster.registry.password}@jhipster-registry:8761/eureka
      - SPRING_CLOUD_CONFIG_URI=http://admin:$\${jhipster.registry.password}@jhipster-registry:8761/config
      - SPRING_R2DBC_URL=r2dbc:postgresql://jhipster-postgresql:5432/jhipster
      - SPRING_LIQUIBASE_URL=jdbc:postgresql://jhipster-postgresql:5432/jhipster
      - SPRING_ELASTICSEARCH_URIS=http://jhipster-elasticsearch:9200
      - SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS=kafka:9092
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8081/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      postgresql:
        condition: service_healthy
      elasticsearch:
        condition: service_healthy
      jhipster-registry:
        condition: service_healthy
  postgresql:
    extends:
      file: ./postgresql.yml
      service: postgresql
  elasticsearch:
    extends:
      file: ./elasticsearch.yml
      service: elasticsearch
  jhipster-registry:
    extends:
      file: ./jhipster-registry.yml
      service: jhipster-registry
  kafka:
    extends:
      file: ./kafka.yml
      service: kafka
  zookeeper:
    extends:
      file: ./kafka.yml
      service: zookeeper
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker microservice-jwt-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-enableSwaggerCodegen:true-skipUserManagement(true)-eureka-postgresql-elasticsearch-eureka-enableSwaggerCodegen(true)-kafka should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/docker-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/localhost-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/elasticsearch.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-registry.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/kafka.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/swagger-editor.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/zipkin.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker microservice-oauth2-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-gatling-enableSwaggerCodegen:true-websocket(true)-eureka-mssql-searchEngine(no)-serviceDiscoveryType(no)-enableSwaggerCodegen(true)-kafka-memcached should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - SPRING_DATASOURCE_URL=jdbc:sqlserver://jhipster-mssql:1433;database=jhipster;encrypt=false
      - SPRING_LIQUIBASE_URL=jdbc:sqlserver://jhipster-mssql:1433;database=jhipster;encrypt=false
      - JHIPSTER_CACHE_MEMCACHED_SERVERS=jhipster-memcached:11211
      - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI=http://keycloak:9080/realms/jhipster
      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_ID=internal
      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_SECRET=internal
      - SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS=kafka:9092
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8081/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      mssql:
        condition: service_healthy
      keycloak:
        condition: service_healthy
  mssql:
    extends:
      file: ./mssql.yml
      service: mssql
  memcached:
    extends:
      file: ./memcached.yml
      service: memcached
  keycloak:
    extends:
      file: ./keycloak.yml
      service: keycloak
  kafka:
    extends:
      file: ./kafka.yml
      service: kafka
  zookeeper:
    extends:
      file: ./kafka.yml
      service: zookeeper
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker microservice-oauth2-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-gatling-enableSwaggerCodegen:true-websocket(true)-eureka-mssql-searchEngine(no)-serviceDiscoveryType(no)-enableSwaggerCodegen(true)-kafka-memcached should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/kafka.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/keycloak.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/memcached.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mssql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/realm-config/jhipster-realm.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/swagger-editor.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/zipkin.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker microservice-oauth2-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-gatling-consul-cassandra-elasticsearch-consul-enableSwaggerCodegen(false)-messageBroker(no) should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - SPRING_CLOUD_CONSUL_HOST=consul
      - SPRING_CLOUD_CONSUL_PORT=8500
      - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI=http://keycloak:9080/realms/jhipster
      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_ID=internal
      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_SECRET=internal
      - SPRING_CASSANDRA_CONTACTPOINTS=jhipster-cassandra
      - JHIPSTER_SLEEP=10
      - SPRING_ELASTICSEARCH_URIS=http://jhipster-elasticsearch:9200
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8081/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      cassandra:
        condition: service_healthy
      cassandra-migration:
        condition: service_completed_successfully
      elasticsearch:
        condition: service_healthy
      keycloak:
        condition: service_healthy
  cassandra:
    extends:
      file: ./cassandra.yml
      service: cassandra
  cassandra-migration:
    extends:
      file: ./cassandra.yml
      service: cassandra-migration
  elasticsearch:
    extends:
      file: ./elasticsearch.yml
      service: elasticsearch
  keycloak:
    extends:
      file: ./keycloak.yml
      service: keycloak
  consul:
    extends:
      file: ./consul.yml
      service: consul
  consul-config-loader:
    extends:
      file: ./consul.yml
      service: consul-config-loader
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker microservice-oauth2-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-gatling-consul-cassandra-elasticsearch-consul-enableSwaggerCodegen(false)-messageBroker(no) should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/cassandra-cluster.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/cassandra-migration.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/cassandra.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/cassandra/Cassandra-Migration.Dockerfile": {
    "stateCleared": "modified",
  },
  "src/main/docker/cassandra/scripts/autoMigrate.sh": {
    "stateCleared": "modified",
  },
  "src/main/docker/cassandra/scripts/execute-cql.sh": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/config/git2consul.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/consul.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/elasticsearch.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/keycloak.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/realm-config/jhipster-realm.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/zipkin.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-jwt-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-enableSwaggerCodegen:true-websocket(true)-skipUserManagement(false)-consul-mariadb-searchEngine(no)-serviceDiscoveryType(no)-enableSwaggerCodegen(false)-kafka-hazelcast should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - SPRING_DATASOURCE_URL=jdbc:mariadb://jhipster-mariadb:3306/jhipster?useLegacyDatetimeCode=false&serverTimezone=UTC
      - SPRING_LIQUIBASE_URL=jdbc:mariadb://jhipster-mariadb:3306/jhipster?useLegacyDatetimeCode=false&serverTimezone=UTC
      - SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS=kafka:9092
    ports:
      - 127.0.0.1:8080:8080
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8080/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      mariadb:
        condition: service_healthy
  mariadb:
    extends:
      file: ./mariadb.yml
      service: mariadb
  kafka:
    extends:
      file: ./kafka.yml
      service: kafka
  zookeeper:
    extends:
      file: ./kafka.yml
      service: zookeeper
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-jwt-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-enableSwaggerCodegen:true-websocket(true)-skipUserManagement(false)-consul-mariadb-searchEngine(no)-serviceDiscoveryType(no)-enableSwaggerCodegen(false)-kafka-hazelcast should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/config/mariadb/my.cnf": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/hazelcast-management-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/kafka.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mariadb.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-jwt-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-cucumber-skipUserManagement(true)-serviceDiscoveryType(no)-mongodb-elasticsearch-consul-enableSwaggerCodegen(true)-messageBroker(no) should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - SPRING_CLOUD_CONSUL_HOST=consul
      - SPRING_CLOUD_CONSUL_PORT=8500
      - SPRING_DATA_MONGODB_URI=mongodb://jhipster-mongodb:27017/?waitQueueMultiple=1000
      - SPRING_DATA_MONGODB_DATABASE=jhipster
      - SPRING_ELASTICSEARCH_URIS=http://jhipster-elasticsearch:9200
    ports:
      - 127.0.0.1:8080:8080
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8080/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      mongodb:
        condition: service_healthy
      elasticsearch:
        condition: service_healthy
  mongodb:
    extends:
      file: ./mongodb.yml
      service: mongodb
  elasticsearch:
    extends:
      file: ./elasticsearch.yml
      service: elasticsearch
  consul:
    extends:
      file: ./consul.yml
      service: consul
  consul-config-loader:
    extends:
      file: ./consul.yml
      service: consul-config-loader
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-jwt-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-cucumber-skipUserManagement(true)-serviceDiscoveryType(no)-mongodb-elasticsearch-consul-enableSwaggerCodegen(true)-messageBroker(no) should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/config/git2consul.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/consul.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/elasticsearch.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb-cluster.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb/MongoDB.Dockerfile": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb/scripts/init_replicaset.js": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/swagger-editor.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/zipkin.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-oauth2-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-websocket(false)-serviceDiscoveryType(no)-postgresql-searchEngine(no)-serviceDiscoveryType(no)-enableSwaggerCodegen(false)-messageBroker(no)-cacheProvider(no) should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - SPRING_DATASOURCE_URL=jdbc:postgresql://jhipster-postgresql:5432/jhipster
      - SPRING_LIQUIBASE_URL=jdbc:postgresql://jhipster-postgresql:5432/jhipster
      - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI=http://keycloak:9080/realms/jhipster
      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_ID=web_app
      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_SECRET=web_app
    ports:
      - 127.0.0.1:8080:8080
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8080/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      postgresql:
        condition: service_healthy
      keycloak:
        condition: service_healthy
  postgresql:
    extends:
      file: ./postgresql.yml
      service: postgresql
  keycloak:
    extends:
      file: ./keycloak.yml
      service: keycloak
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-oauth2-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-websocket(false)-serviceDiscoveryType(no)-postgresql-searchEngine(no)-serviceDiscoveryType(no)-enableSwaggerCodegen(false)-messageBroker(no)-cacheProvider(no) should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/keycloak.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/realm-config/jhipster-realm.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-oauth2-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-cucumber-enableSwaggerCodegen:true-eureka-neo4j-elasticsearch-consul-enableSwaggerCodegen(true)-kafka should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - SPRING_CLOUD_CONSUL_HOST=consul
      - SPRING_CLOUD_CONSUL_PORT=8500
      - SPRING_NEO4J_URI=bolt://jhipster-neo4j:7687
      - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI=http://keycloak:9080/realms/jhipster
      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_ID=web_app
      - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_SECRET=web_app
      - SPRING_ELASTICSEARCH_URIS=http://jhipster-elasticsearch:9200
      - SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS=kafka:9092
    ports:
      - 127.0.0.1:8080:8080
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8080/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      neo4j:
        condition: service_healthy
      elasticsearch:
        condition: service_healthy
      keycloak:
        condition: service_healthy
  neo4j:
    extends:
      file: ./neo4j.yml
      service: neo4j
  elasticsearch:
    extends:
      file: ./elasticsearch.yml
      service: elasticsearch
  keycloak:
    extends:
      file: ./keycloak.yml
      service: keycloak
  consul:
    extends:
      file: ./consul.yml
      service: consul
  consul-config-loader:
    extends:
      file: ./consul.yml
      service: consul-config-loader
  kafka:
    extends:
      file: ./kafka.yml
      service: kafka
  zookeeper:
    extends:
      file: ./kafka.yml
      service: zookeeper
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-oauth2-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-cucumber-enableSwaggerCodegen:true-eureka-neo4j-elasticsearch-consul-enableSwaggerCodegen(true)-kafka should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/config/git2consul.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/consul.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/elasticsearch.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/kafka.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/keycloak.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/neo4j.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/realm-config/jhipster-realm.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/swagger-editor.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/zipkin.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-session-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-gatling-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-mysql-searchEngine(no)-serviceDiscoveryType(no)-enableSwaggerCodegen(true)-messageBroker(no)-redis should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - SPRING_DATASOURCE_URL=jdbc:mysql://jhipster-mysql:3306/jhipster?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
      - SPRING_LIQUIBASE_URL=jdbc:mysql://jhipster-mysql:3306/jhipster?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
      - JHIPSTER_CACHE_REDIS_SERVER=redis://jhipster-redis:6379
      - JHIPSTER_CACHE_REDIS_CLUSTER=false
    ports:
      - 127.0.0.1:8080:8080
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8080/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      mysql:
        condition: service_healthy
  mysql:
    extends:
      file: ./mysql.yml
      service: mysql
  redis:
    extends:
      file: ./redis.yml
      service: redis
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-session-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-gatling-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-mysql-searchEngine(no)-serviceDiscoveryType(no)-enableSwaggerCodegen(true)-messageBroker(no)-redis should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/config/mysql/my.cnf": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mysql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/redis-cluster.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/redis.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/redis/Redis-Cluster.Dockerfile": {
    "stateCleared": "modified",
  },
  "src/main/docker/redis/connectRedisCluster.sh": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/swagger-editor.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-session-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-gatling-enableSwaggerCodegen:true-skipUserManagement(true)-consul-couchbase-elasticsearch-consul-enableSwaggerCodegen(false)-kafka should match app.yml snapshot 1`] = `
{
  "src/main/docker/app.yml": {
    "contents": "# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
name: jhipster
services:
  app:
    image: jhipster
    environment:
      - _JAVA_OPTIONS=-Xmx512m -Xms256m
      - SPRING_PROFILES_ACTIVE=prod,api-docs
      - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
      - SPRING_CLOUD_CONSUL_HOST=consul
      - SPRING_CLOUD_CONSUL_PORT=8500
      - SPRING_COUCHBASE_CONNECTION_STRING=jhipster-couchbase
      - JHIPSTER_DATABASE_COUCHBASE_BUCKET_NAME=jhipster
      - JHIPSTER_SLEEP=20
      - SPRING_ELASTICSEARCH_URIS=http://jhipster-elasticsearch:9200
      - SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS=kafka:9092
    ports:
      - 127.0.0.1:8080:8080
    healthcheck:
      test:
        - CMD
        - curl
        - -f
        - http://localhost:8080/management/health
      interval: 5s
      timeout: 5s
      retries: 40
    depends_on:
      couchbase:
        condition: service_healthy
      elasticsearch:
        condition: service_healthy
  couchbase:
    extends:
      file: ./couchbase.yml
      service: couchbase
  elasticsearch:
    extends:
      file: ./elasticsearch.yml
      service: elasticsearch
  consul:
    extends:
      file: ./consul.yml
      service: consul
  consul-config-loader:
    extends:
      file: ./consul.yml
      service: consul-config-loader
  kafka:
    extends:
      file: ./kafka.yml
      service: kafka
  zookeeper:
    extends:
      file: ./kafka.yml
      service: zookeeper
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - docker monolith-session-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-gatling-enableSwaggerCodegen:true-skipUserManagement(true)-consul-couchbase-elasticsearch-consul-enableSwaggerCodegen(false)-kafka should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/config/git2consul.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/consul.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/couchbase-cluster.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/couchbase.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/couchbase/Couchbase.Dockerfile": {
    "stateCleared": "modified",
  },
  "src/main/docker/couchbase/scripts/configure-node.sh": {
    "stateCleared": "modified",
  },
  "src/main/docker/elasticsearch.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/kafka.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/zipkin.yml": {
    "stateCleared": "modified",
  },
}
`;
